--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1041,7 +1041,7 @@
         <td>Unlockable</td>
         <td>Animal Crossing</td>
         <td class="notes">
-          <b>Standard:</b> Pocket<br/>
+          <b>Neutral:</b> Pocket<br/>
           <b>Side:</b> Lloid Rocket<br/>
           <b>Up:</b> Balloon Trip<br/>
           <b>Down:</b> Timber<br/>
@@ -1061,7 +1061,7 @@
         <td>Unlockable</td>
         <td>Mega Man</td>
         <td class="notes">
-          <b>Standard:</b> Metal Blade<br/>
+          <b>Neutral:</b> Metal Blade<br/>
           <b>Side:</b> Crash Bomber<br/>
           <b>Up:</b> Rush Coil<br/>
           <b>Down:</b> Leaf Shield<br/>
@@ -1081,7 +1081,7 @@
         <td>Unlockable</td>
         <td>Wii Fit</td>
         <td class="notes">
-          <b>Standard:</b> Sun Salutation<br/>
+          <b>Neutral:</b> Sun Salutation<br/>
           <b>Side:</b> Header<br/>
           <b>Up:</b> Super Hoop<br/>
           <b>Down:</b> Deep Breathing<br/>
@@ -1101,7 +1101,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Luma Shot<br/>
+          <b>Neutral:</b> Luma Shot<br/>
           <b>Side:</b> Star Bits<br/>
           <b>Up:</b> Launch Star<br/>
           <b>Down:</b> Gravitational Pull<br/>
@@ -1121,7 +1121,7 @@
         <td>Unlockable</td>
         <td>Punch-Out!!</td>
         <td class="notes">
-          <b>Standard:</b> Straight Lunge<br/>
+          <b>Neutral:</b> Straight Lunge<br/>
           <b>Side:</b> Jolt Haymaker<br/>
           <b>Up:</b> Rising Uppercut<br/>
           <b>Down:</b> Slip Counter<br/>
@@ -1141,7 +1141,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> Water Shuriken<br/>
+          <b>Neutral:</b> Water Shuriken<br/>
           <b>Side:</b> Shadow Sneak<br/>
           <b>Up:</b> Hydro Pump<br/>
           <b>Down:</b> Substitute<br/>
@@ -1161,7 +1161,7 @@
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
         <td class="notes">
-          <b>Standard:</b> Shot Put / Ultimate Uppercut / Exploding Side Kick<br/>
+          <b>Neutral:</b> Shot Put / Ultimate Uppercut / Exploding Side Kick<br/>
           <b>Side:</b> Onslaught / Burning Dropkick / Headache Maker<br/>
           <b>Up:</b> Soaring Axe Kick / Helicopter Kick / Piston Punch<br/>
           <b>Down:</b> Head-On Assault / Feint Jump / Foot Flurry<br/>
@@ -1181,7 +1181,7 @@
         <td>Unlockable</td>
         <td>Super Smash Bros.</td>
         <td class="notes">
-          <b>Standard:</b> Gale Strike / Shuriken of Light / Blurring Blade<br/>
+          <b>Neutral:</b> Gale Strike / Shuriken of Light / Blurring Blade<br/>
           <b>Side:</b> Airborne Assault / Slash Launcher / Chakram<br/>
           <b>Up:</b> Stone Scabbard / Skyward Slash Dash / Hero's Spin<br/>
           <b>Down:</b> Blade Counter / Reversal Slash / Power Thrust<br/>
@@ -1201,7 +1201,7 @@
         <td>Unlockable</td>
         <td>Super Smash Bros</td>
         <td class="notes">
-          <b>Standard:</b> Charge Blast / Laser Blaze / Grenade Launch<br/>
+          <b>Neutral:</b> Charge Blast / Laser Blaze / Grenade Launch<br/>
           <b>Side:</b> Flame Pillar / Stealth Burst / Gunner Missile<br/>
           <b>Up:</b> Lunar Launch / Cannon Uppercut / Arm Rocket<br/>
           <b>Down:</b> Echo Reflector / Bomb Drop / Absorbing Vortex<br/>
@@ -1221,9 +1221,9 @@
         <td>Unlockable</td>
         <td>Kid Icarus</td>
         <td class="notes">
-          <b>Standard:</b> Autoreticle / Explosive Flame (3DS/Wii U) / Heavenly Light (3DS/Wii U)<br/>
+          <b>Neutral:</b> Autoreticle (3DS/Wii U) / Explosive Flame (3DS/Wii U) / Heavenly Light (3DS/Wii U); Autoreticle (<i>Ultimate</i>)<br/>
           <b>Side:</b> Reflect Barrier (3DS/Wii U) / Angelic Missle (3DS/Wii U) / Super Speed (3DS/Wii U); Explosive Flame (<i>Ultimate</i>)<br/>
-          <b>Up:</b> Warp / Jump Glide (3DS/Wii U) / Rocket Jump (3DS/Wii U)<br/>
+          <b>Up:</b> Warp (3DS/Wii U) / Jump Glide (3DS/Wii U) / Rocket Jump (3DS/Wii U); Warp (<i>Ultimate</i>)<br/>
           <b>Down:</b> Counter (3DS/Wii U) / Lightweight (3DS/Wii U) / Celestial Firework (3DS/Wii U); Counter / Reflect Barrier (<i>Ultimate</i>)<br/>
           <b>Final Smash:</b> Black Hole Laser
         </td>
@@ -1241,7 +1241,7 @@
         <td>Unlockable</td>
         <td>Pac-Man</td>
         <td class="notes">
-          <b>Standard:</b> Bonus Fruit<br/>
+          <b>Neutral:</b> Bonus Fruit<br/>
           <b>Side:</b> Power Pellet<br/>
           <b>Up:</b> Pac-Jump<br/>
           <b>Down:</b> Fire Hydrant<br/>
@@ -1261,7 +1261,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Thunder<br/>
+          <b>Neutral:</b> Thunder<br/>
           <b>Side:</b> Arcfire<br/>
           <b>Up:</b> Elwind<br/>
           <b>Down:</b> Nosferatu<br/>
@@ -1281,7 +1281,7 @@
         <td>Unlockable</td>
         <td>Xenoblade</td>
         <td class="notes">
-          <b>Standard:</b> Monado Arts<br/>
+          <b>Neutral:</b> Monado Arts<br/>
           <b>Side:</b> Back Slash<br/>
           <b>Up:</b> Air Slash<br/>
           <b>Down:</b> Vision<br/>
@@ -1301,7 +1301,7 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Standard:</b> Clown Cannon<br/>
+          <b>Neutral:</b> Clown Cannon<br/>
           <b>Side:</b> Clown Kart Dash<br/>
           <b>Up:</b> Abandon Ship!<br/>
           <b>Down:</b> Mechakoopa<br/>
@@ -1321,7 +1321,7 @@
         <td>Unlockable</td>
         <td>Duck Hunt</td>
         <td class="notes">
-          <b>Standard:</b> Trick Shot<br/>
+          <b>Neutral:</b> Trick Shot<br/>
           <b>Side:</b> Clay Shooting<br/>
           <b>Up:</b> Duck Jump<br/>
           <b>Down:</b> Wild Gunman<br/>
@@ -1341,7 +1341,7 @@
         <td>Unlockable</td>
         <td>Street Fighter</td>
         <td class="notes">
-          <b>Standard:</b> Hadoken<br/>
+          <b>Neutral:</b> Hadoken<br/>
           <b>Side:</b> Tatsumaki Senpukyaku<br/>
           <b>Up:</b> Shoryuken<br/>
           <b>Down:</b> Focus Attack<br/>
@@ -1361,7 +1361,7 @@
         <td>Unlockable</td>
         <td>Street Fighter</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1381,7 +1381,7 @@
         <td>Unlockable</td>
         <td>Final Fantasy</td>
         <td class="notes">
-          <b>Standard:</b> Blade Beam<br/>
+          <b>Neutral:</b> Blade Beam<br/>
           <b>Side:</b> Cross Slash<br/>
           <b>Up:</b> Climhazzard<br/>
           <b>Down:</b> Limit Charge / Finishing Touch<br/>
@@ -1401,7 +1401,7 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Standard:</b> Dragon Fang Shot<br/>
+          <b>Neutral:</b> Dragon Fang Shot<br/>
           <b>Side:</b> Dragon Lunge<br/>
           <b>Up:</b> Draconic Ascent<br/>
           <b>Down:</b> Counter Surge<br/>
@@ -1421,7 +1421,7 @@
         <td>Unlockable</td>
         <td>Bayonetta</td>
         <td class="notes">
-          <b>Standard:</b> Bullet Climax<br/>
+          <b>Neutral:</b> Bullet Climax<br/>
           <b>Side:</b> Heel Slide / After Burner Kick<br/>
           <b>Up:</b> Witch Twist<br/>
           <b>Down:</b> Witch Time<br/>
@@ -1441,7 +1441,7 @@
         <td>Unlockable</td>
         <td>Splatoon</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1461,7 +1461,7 @@
         <td>Unlockable</td>
         <td>Metroid</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1481,7 +1481,7 @@
         <td>Unlockable</td>
         <td>Castlevania</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1501,7 +1501,7 @@
         <td>Unlockable</td>
         <td>Castlevania</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1521,7 +1521,7 @@
         <td>Unlockable</td>
         <td>Donkey Kong</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1541,7 +1541,7 @@
         <td>Unlockable</td>
         <td>Animal Crossing</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
@@ -1561,7 +1561,7 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Standard:</b> <br/>
+          <b>Neutral:</b> <br/>
           <b>Side:</b> <br/>
           <b>Up:</b> <br/>
           <b>Down:</b> <br/>
