--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -324,11 +324,11 @@
         <td>Unlockable</td>
         <td>Mario</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Toad<br/>
+          <b>Side:</b> Daisy Bomber<br/>
+          <b>Up:</b> Daisy Parasol<br/>
+          <b>Down:</b> Vegetable<br/>
+          <b>Final Smash:</b> Daisy Blossom
         </td>
       </tr>
       <tr>
@@ -604,11 +604,11 @@
         <td>Unlockable</td>
         <td>Fire Emblem</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Flare Blade<br/>
+          <b>Side:</b> Double-Edge Dance<br/>
+          <b>Up:</b> Soaring Slash<br/>
+          <b>Down:</b> Counter<br/>
+          <b>Final Smash:</b> Awakening Aether
         </td>
       </tr>
       <tr>
