--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1361,11 +1361,11 @@
         <td>Unlockable</td>
         <td>Street Fighter</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Hadoken<br/>
+          <b>Side:</b> Tatsumaki Senpukyaku<br/>
+          <b>Up:</b> Shoryuken<br/>
+          <b>Down:</b> Focus Attack<br/>
+          <b>Final Smash:</b> Shippu Jinraikyaku / Shinryuken
         </td>
       </tr>
       <tr>
