--- a/super-smash-bros.html
+++ b/super-smash-bros.html
@@ -1441,11 +1441,11 @@
         <td>Unlockable</td>
         <td>Splatoon</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Splattershot<br/>
+          <b>Side:</b> Splat Roller<br/>
+          <b>Up:</b> Super Jump<br/>
+          <b>Down:</b> Splat Bomb<br/>
+          <b>Final Smash:</b> Killer Wail
         </td>
       </tr>
       <tr>
@@ -1461,11 +1461,11 @@
         <td>Unlockable</td>
         <td>Metroid</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Plasma Breath<br/>
+          <b>Side:</b> Space Pirate Rush<br/>
+          <b>Up:</b> Wing Blitz<br/>
+          <b>Down:</b> Skewer<br/>
+          <b>Final Smash:</b> Plasma Scream
         </td>
       </tr>
       <tr>
@@ -1481,11 +1481,11 @@
         <td>Unlockable</td>
         <td>Castlevania</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Axa<br/>
+          <b>Side:</b> Cross<br/>
+          <b>Up:</b> Uppercut<br/>
+          <b>Down:</b> Holy Water<br/>
+          <b>Final Smash:</b> Grand Cross
         </td>
       </tr>
       <tr>
@@ -1501,11 +1501,11 @@
         <td>Unlockable</td>
         <td>Castlevania</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Axe<br/>
+          <b>Side:</b> Cross<br/>
+          <b>Up:</b> Uppercut<br/>
+          <b>Down:</b> Holy Water<br/>
+          <b>Final Smash:</b> Grand Cross
         </td>
       </tr>
       <tr>
@@ -1521,11 +1521,11 @@
         <td>Unlockable</td>
         <td>Donkey Kong</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Blunderbuss<br/>
+          <b>Side:</b> Crownerang<br/>
+          <b>Up:</b> Propellerpack<br/>
+          <b>Down:</b> Gut Check<br/>
+          <b>Final Smash:</b> Blast-O-Matic
         </td>
       </tr>
       <tr>
@@ -1541,11 +1541,11 @@
         <td>Unlockable</td>
         <td>Animal Crossing</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Pocket<br/>
+          <b>Side:</b> Fishing Rod<br/>
+          <b>Up:</b> Balloon Trip<br/>
+          <b>Down:</b> Lloid Trap<br/>
+          <b>Final Smash:</b> Lloid Trap
         </td>
       </tr>
       <tr>
@@ -1561,11 +1561,11 @@
         <td>Unlockable</td>
         <td>Pokémon</td>
         <td class="notes">
-          <b>Neutral:</b> <br/>
-          <b>Side:</b> <br/>
-          <b>Up:</b> <br/>
-          <b>Down:</b> <br/>
-          <b>Final Smash:</b> 
+          <b>Neutral:</b> Darkest Lariat<br/>
+          <b>Side:</b> Alolan Whip<br/>
+          <b>Up:</b> Alolan Whip<br/>
+          <b>Down:</b> Revenge<br/>
+          <b>Final Smash:</b> Max Malicious Moonsault
         </td>
       </tr>
     </table>
